functionality updates + code optimization thumbs added start removing useless code and not used parts

--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -20,14 +20,14 @@
     <!-- Semantic UI CSS-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
     <!-- Owl Carousel CSS-->
-    <link rel="stylesheet" href="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.css">
+    <!-- <link rel="stylesheet" href="https://bbcdn.githack.com/shahzadns/owlfonk-owlcarousel/raw/31413692812896e19db89baee9be30b9d36d1e64/owl-carousel/owl.carousel.css"> -->
     <!-- Bootstrap Material Date and Time Picker-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/T00rk/bootstrap-material-datetimepicker/gh-pages/css/bootstrap-material-datetimepicker.css">
     <!-- Icons-->
-    <link rel="stylesheet" href="styles/icons.css">
+    <!-- <link rel="stylesheet" href="styles/icons.css"> -->
     <link rel="stylesheet" href="./assets/icons/themify-icons.css">
     <!-- Flag icons-->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css">
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/lipis/flag-icon-css/master/css/flag-icon.min.css"> -->
     <!-- START of FONTS-->
     <!-- Google Material Icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
