add new modal and global fixes color

--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -84,7 +84,7 @@
                         <li role="presentation" class="timeline-li disable-state"><a href="#archived" aria-controls="orders" role="tab" data-toggle="tab">Completed</a></li>
                         <li role="presentation" class="timeline-li disable-state"><a href="#messages" aria-controls="orders" role="tab" data-toggle="tab">Messages</a></li>
                     </ul>
-                    
+
                     <!-- ADD GIG ROUND BUTTON-->
                     <!-- <div open-modal="#add-gig" class="plusIcon gigs active open-modal"><i class="material-icons">library_add</i></div>
                     <div open-modal="#add-portfolio" class="plusIcon portfolio open-modal"><i class="material-icons">note_add</i></div> -->
@@ -258,7 +258,7 @@
                     </div>
                     <div class="modal-footer pdd-horizon-30">
                         <div class="text-right">
-                            <button class="btn btn-default btn-sm no-mrg" data-dismiss="modal">
+                            <button class="btn btn-default btn-sm no-mrg modal-btn-order" data-dismiss="modal">
                     Hold &nbsp; <span id="redesigned-modal-gig-price-req">0.00 </span> &nbsp;
                     <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;
                     Price &nbsp; <span id="redesigned-modal-gig-price"> 0.00 </span> &nbsp; Order
