--- a/ethnode/webui/src/index.html
+++ b/ethnode/webui/src/index.html
@@ -928,34 +928,34 @@
                   <div class="marker marker-100"><sup><i class="material-icons">polymer</i></sup>10,000+</div>
                 </div>
               </div>
-              <br>
-              <br>
-              <p>Ethearnal Rep. Tokens</p>
-              <select class="ui fluid search dropdown">
-							<option value="">Lock(x){eRt}</option>
-							<option value="SD">from 0% to 10% </option>
-							<option value="FA">from 10% to 15%</option>
-							<option value="MA">from 15% to 20%</option>
-							<option value="VA">from 20% to 40%</option>
-							<option value="RR">Reset</option>
-						</select>
+              <br><br>
+              <!-- <div>
+                <br>
+                <p>Ethearnal Rep. Tokens</p>
 
-              <br>
+                <select class="ui fluid search dropdown">
+                  <option value="">Lock(x){eRt}</option>
+                  <option value="SD">from 0% to 10% </option>
+                  <option value="FA">from 10% to 15%</option>
+                  <option value="MA">from 15% to 20%</option>
+                  <option value="VA">from 20% to 40%</option>
+                  <option value="RR">Reset</option>
+                </select>
 
-              <select class="ui fluid search dropdown">
-							<option value="">Hold(y){eRt}</option>
+                <br>
 
-							<option value="SD">from 0 to 100</option>
-							<option value="FA">from 100 to 500</option>
-							<option value="MA">from 500 to 1000</option>
-							<option value="VA">more than 1K</option>
-							<option value="RR">Reset</option>
-						</select>
+                <select class="ui fluid search dropdown">
+                  <option value="">Hold(y){eRt}</option>
 
-              <br>
+                  <option value="SD">from 0 to 100</option>
+                  <option value="FA">from 100 to 500</option>
+                  <option value="MA">from 500 to 1000</option>
+                  <option value="VA">more than 1K</option>
+                  <option value="RR">Reset</option>
+                </select>
+              </div> -->
 
             </div>
-
           </div>
         </div>
 
@@ -1247,10 +1247,10 @@
       <div class="new-modal-footer">
         <div class="new-modal-footer-buttons">
           <button class="mdl-button mdl-js-button buy">
-                Hold &nbsp; <span id="new-modal-gig-price-req">0.00 </span> &nbsp;
-                <i class="material-icons">polymer</i> &nbsp;
-                Price &nbsp; <span id="new-modal-gig-price"> 0.00 </span> &nbsp; Order
-                    </button>
+            Hold &nbsp; <span id="new-modal-gig-price-req">0.00 </span> &nbsp;
+            <i class="material-icons">polymer</i> &nbsp;
+            Price &nbsp; <span id="new-modal-gig-price"> 0.00 </span> &nbsp; Order
+          </button>
         </div>
       </div>
     </div>
