Fix for order button

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1322,12 +1322,14 @@
             </div>
           </div>
           <div class="modal-footer no-pdd-horizon">
-            <div class="text-right">
-              <button class="btn btn-default btn-sm no-mrg" data-dismiss="modal">
-                              Hold &nbsp; <span id="redesigned-modal-gig-price-req">0.00 </span> &nbsp;
-                              <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;
-                              Price &nbsp; <span id="redesigned-modal-gig-price"> 0.00 </span> &nbsp; Order
-                            </button>
+            <div class="text-right clearfix">
+              <p class="pull-left font-size-14">
+                Price: <span id="redesigned-modal-gig-price"> 0.00 </span> <i class="material-icons font-size-18" style="vertical-align: text-bottom;">polymer</i> &nbsp;&nbsp;
+                Lock: <span id="redesigned-modal-gig-price-req">0.00 </span>
+              </p>
+              <button class="btn btn-default btn-sm no-mrg btn-pink" data-dismiss="modal">
+                Order
+              </button>
             </div>
           </div>
         </div>
