--- a/ethnode/webui/src/index.html
+++ b/ethnode/webui/src/index.html
@@ -578,7 +578,7 @@
               <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
               <label for="input-image-gig" class="img-label" style="background-image: url('images/image-video-image-file.png');"><p class="add-photo-label"></p></label>
               <div class="btns-wrap">
-                <button style="" class="btn btn-info jsCropUpload">Upload photo</button>
+                <button style="" class="btn btn-pink jsCropUpload">Upload photo</button>
                 <button style="display: none;" class="btn btn-success jsCropResult">Confirm result</button>
               </div>
               <img id="input-image-gig" src="#"
@@ -634,7 +634,7 @@
           </div>
           <div class="modal-footer">
             <button class="btn btn-default lh-normal close-btn mdl-button mdl-js-button close-button">Close</button>
-            <button id="publish4" style="" class="btn btn-info lh-normal mdl-button mdl-js-button finish-button">Publish</button>
+            <button id="publish4" style="" class="btn btn-pink lh-normal mdl-button mdl-js-button finish-button">Publish</button>
             <div data-mdl-for="publish4" class="mdl-tooltip">This text will be changed anyway.</div>
           </div>
         </div>
@@ -925,7 +925,7 @@
                   </div>
                   <div class="marker marker-0"><sup><i class="material-icons">polymer</i></sup>0</div>
                   <div class="marker marker-50"><sup><i class="material-icons">polymer</i></sup>5,000</div>
-                  <div class="marker marker-100"><sup><i class="material-icons">polymer</i></sup>10,000+</div>
+                  <div class="marker marker-100"><sup><i class="material-icons">polymer</i></sup>10K+</div>
                 </div>
               </div>
               <br><br>
