--- a/ethnode/webui/profile.html
+++ b/ethnode/webui/profile.html
@@ -44,7 +44,7 @@
     <!-- END of LINKS-->
 </head>
 
-<body class="">
+<body class="profile-page">
     <header class="main-header">
         <div class="container">
             <nav class="flex-block flex-between">
@@ -90,7 +90,7 @@
             </div>
         </div>
     </div>
-    <div class="profile-page">
+    <div class="profile-page-wrap-module">
     <section class="profile-headline">
         <div class="container">
             <div class="row">
@@ -214,7 +214,7 @@
               </div>
               <div class="modal-body">
                 <div id="cropper-wrap-gig" class="cropper-wrap" style="display: none;">
-    
+
                 </div>
                 <div class="form-group">
                   <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
