--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -44,9 +44,9 @@
     <!-- END of LINKS-->
 </head>
 
-<body class="">
+<body class="profile-page">
     //= templates/header-global.html
-    <div class="profile-page">
+    <div class="profile-page-wrap-module">
     <section class="profile-headline">
         <div class="container">
             <div class="row">
@@ -170,7 +170,7 @@
               </div>
               <div class="modal-body">
                 <div id="cropper-wrap-gig" class="cropper-wrap" style="display: none;">
-    
+
                 </div>
                 <div class="form-group">
                   <input id="input-image-gig" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
