Fix for edit modal

--- a/ethnode/webui/src/profile.html
+++ b/ethnode/webui/src/profile.html
@@ -351,8 +351,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button class="mdl-button mdl-js-button close-button">Close</button>
-                            <button id="updateProfile" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
+                            <button class="close-button btn btn-default">Close</button>
+                            <button id="updateProfile" class="btn btn-pink finish-button">Update</button>
                             <div data-mdl-for="updateProfile" class="mdl-tooltip">This text will be changed anyway.</div>
                         </div>
                     </div>
